--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.6.0",
     "framer": "^2.4.1",
-    "framer-motion": "^12.16.0",
+    "framer-motion": "10.18.0",
     "graphql": "^16.11.0",
     "graphql-request": "^7.2.0",
     "input-otp": "^1.4.2",
